@@ -7,6 +7,16 @@ Table Functions
 Table functions are functions that produce a set of rows. They are used like a
 table or subquery in the FROM clause of a query.
 
+``empty_row( )``
+================
+empty_row doesn't take any argument and produces a table with an empty row and 
+no column.
+
+::
+
+    cr> select * from empty_row();
+    SELECT OK, 1 row affected  (... sec)
+
 ``unnest( array [ array , ] )``
 ===============================
 
