@@ -36,7 +36,7 @@ public class SysClusterTest extends SQLTransportIntegrationTest {
 
     @Test
     public void testSysCluster() throws Exception {
-        execute("select id");
+        execute("select id from sys.cluster");
         assertThat(response.rowCount(), is(1L));
         assertThat(((String) response.rows()[0][0]).length(), is(36)); // looks like a uuid
     }
